--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,7 @@
 @import url("../header/__logo/header__logo.css");
 @import url("../header/__links/header__links.css");
 @import url("../header/__link/header__link.css");
+@import url("../header/__link/_active/header__link_active.css");
 
 
 .header {
