--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -5,6 +5,7 @@
   font-size: 24px;
   line-height: 1.15;
   font-weight: normal;
+  transition: opacity 0.5s linear;
 }
 
 .header__link:last-child {
@@ -12,7 +13,7 @@
 }
 
 .header__link:hover {
-  text-decoration: underline;
+  opacity: 0.8;
 }
 
 @media screen and (max-width: 320px) {
